# haskell-tools

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  branch-info-index.html  cabal.project  daily.sh  deploy.sh  deploykey.enc  id_rsa.enc  stack-all.yaml  stack-include-demo.yaml  stack.yaml
demo/: Main.hs  haskell-tools-demo.cabal
demo/Language/Haskell/Tools/: ASTDebug.hs  Demo.hs
demo/Language/Haskell/Tools/ASTDebug/: Instances.hs
demo/exe/: Main.hs
demo/src/Language/Haskell/Tools/: ASTDebug.hs  Demo.hs
demo/test/: Main.hs
demo/website/: index.html
demo/website/css/: demo.css  jstree.css
demo/website/js/: astview.js  editor.js  refactor.js
demo/website/libs/jquery-ui/: index.html  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
demo/website/res/: Demo.hs
demo/website/res/Features/: GHC8.hs  KeepsFormatting.hs  LanguageSupport.hs  LayoutSensitive.hs
demo/website/res/Refactors/: ExtractBind.hs  GenerateExports.hs  GenerateTypeSig.hs  InlineBind.hs  OrganizeExtensions.hs  OrganizeImports.hs  Rename.hs
examples/Project/multi-packages-same-module/package2/: A.hs  package2.cabal
src/ast/: haskell-tools-ast.cabal
src/ast-gen/: haskell-tools-ast-gen.cabal
src/ast-ghc/: haskell-tools-ast-fromghc.cabal
src/ast-ppr/: haskell-tools-prettyprint.cabal
src/ast-ppr/Language/Haskell/Tools/: PrettyPrint.hs
src/ast-trf/: haskell-tools-ast-trf.cabal
src/ast/Language/Haskell/Tools/: AST.hs  Analyzer.hs
src/backend-ghc/: .gitignore  haskell-tools-backend-ghc.cabal
src/backend-ghc/Language/Haskell/Tools/: BackendGHC.hs
src/builtin-refactorings/: .gitignore  ExtensionOrganizerBenchmark.html  haskell-tools-builtin-refactorings.cabal
src/builtin-refactorings/benchmark/ExtensionOrganizerBenchmark/: Main.hs  ManualTraversal.hs  UniPlateTraversal.hs  runBenchmarks.sh
src/builtin-refactorings/examples/CPP/: A.hs  B.hs  BetweenImports.hs  BetweenImports_res.hs  C.hs  ConditionalImport.hs  ConditionalImportBegin.hs  ConditionalImportBegin_res.hs  ConditionalImportEnd.hs  ConditionalImportEnd_res.hs  ConditionalImportHalfRemoved.hs  ConditionalImportHalfRemoved_res.hs  ConditionalImportMulti.hs  ConditionalImportMulti_res.hs  ConditionalImportOrder.hs  ConditionalImport_res.hs  ConditionalSubImport.hs  ConditionalSubImport_res.hs
src/builtin-refactorings/examples/CompleteModules/: Griddler.hs  Hitori.hs  HitoriRepresentation.hs
src/builtin-refactorings/examples/Decl/: AnnPragma.hs  DataFamily.hs  FunBind.hs  FunGuards.hs  GadtConWithCtx.hs  InjectiveTypeFamily.hs  LocalFixity.hs  MinimalPragma.hs  MultipleFixity.hs  StandaloneDeriving.hs
src/builtin-refactorings/examples/Expr/: RecursiveDo.hs  UnboxedSum.hs
src/builtin-refactorings/examples/Module/: Export.hs  ExportSubs.hs
src/builtin-refactorings/examples/Pattern/: NestedWildcard.hs  UnboxedSum.hs
src/builtin-refactorings/examples/Refactor/AutoCorrect/: ComplexExprReOrder.hs  ComplexExprReOrder2.hs  ComplexExprReOrder2_res.hs  ComplexExprReOrder_res.hs  ComplexExprReParen.hs  ComplexExprReParen_res.hs  ExternalInstanceReOrder.hs  ExternalInstanceReOrder_res.hs  Instance.hs  (+16 more)
src/builtin-refactorings/examples/TH/: CrossDef.hs  GADTFields.hs  Quoted.hs
src/builtin-refactorings/test/: Main.hs
src/builtin-refactorings/test/ExtensionOrganizerTest/: AnnotationParser.hs  Main.hs  Parser.hs  runTests.sh
src/cli/: Main.hs  haskell-tools-cli.cabal
src/cli/bench-tests/: full-1.txt  full-2.txt  full-3.txt  selects.txt  three-gen-sigs.txt
src/cli/benchmark/: Main.hs
src/cli/examples/example-project/: Demo.hs
src/cli/examples/example-project_test_session/: Demo.hs
src/cli/exe/: Main.hs
src/cli/test/: Main.hs
src/cli/test-hackage/: Main.hs
src/cli/test-stackage/: Main.hs
src/daemon/: LICENSE  haskell-tools-daemon.cabal
src/daemon/exe/: Main.hs
src/daemon/test/: Main.hs
src/debug/: haskell-tools-debug.cabal
src/debug/exe/: Main.hs
src/experimental-refactorings/: haskell-tools-experimental-refactorings.cabal
src/experimental-refactorings/test/: Main.hs
src/prettyprint/: haskell-tools-prettyprint.cabal
src/refactor/: haskell-tools-refactor.cabal
src/refactor/benchmark/: Main.hs
src/refactor/examples/CPP/: BetweenImports.hs  ConditionalCode.hs  ConditionalImport.hs  ConditionalImportBegin.hs  ConditionalImportBegin_res.hs  ConditionalImportEnd_res.hs  ConditionalImportHalfRemoved.hs  ConditionalImportMulti.hs  ConditionalImport_res.hs  JustEnabled.hs
src/refactor/examples/CommentHandling/: BlockComments.hs  CommentTypes.hs  Crosslinking.hs  FunctionArgs.hs
src/refactor/examples/Decl/: ClassInfix.hs  ClosedTypeFamily.hs  CompletePragma.hs  CtorOp.hs  DataInstanceGADT.hs  DataTypeDerivings.hs  DefaultDecl.hs  FunFixity.hs  GADT.hs  InfixAssertion.hs  InfixInstances.hs  InfixPatSyn.hs  InlinePragma.hs  InstanceFamily.hs  InstanceOverlaps.hs  InstanceSpec.hs  LocalBindingInDo.hs  LocalBindings.hs  MixedInstance.hs  OperatorBind.hs  ParamDataType.hs  PatternBind.hs  PatternSynonym.hs  RecordPatternSynonyms.hs  RewriteRule.hs  SpecializePragma.hs  TypeFamily.hs  ViewPatternSynonym.hs
src/refactor/examples/Expr/: Case.hs  EmptyCase.hs  EmptyLet.hs  FunSection.hs  GeneralizedListComp.hs  ImplicitParamsOrder.hs  MultiwayIf.hs  PatternAndDo.hs  RecordWildcards.hs  SccPragma.hs  SemicolonDo.hs  TupleSections.hs
src/refactor/examples/Module/: DeprecatedPragma.hs  Export.hs  ExportModifiers.hs  Import.hs  ImportOp.hs  Imported.hs  LangPragmas.hs  PatternImport.hs  Simple.hs
src/refactor/examples/Pattern/: Backtick.hs  Infix.hs  NPlusK.hs  OperatorPattern.hs
src/refactor/examples/TH/: Brackets.hs  ClassUse.hs  DoubleSplice.hs  LocalDefinition.hs  MultiImport.hs  NestedSplices.hs  WithWildcards.hs
src/refactor/examples/Type/: Bang.hs  Forall.hs  Primitives.hs  TupleAssert.hs  TypeOperators.hs  Unpack.hs  Wildcard.hs
src/refactor/test/: Main.hs
test/: Main.hs  haskell-tools-test.cabal
test/require/: haskell-tools-require.cabal
(+1238 files in other folders)
