name:                haskell-tools-demo
version:             0.2.0.0
synopsis:            A web-based demo for Haskell-tools Refactor. 
description:         Allows websocket clients to connect and performs refactorings on demand. The clients maintain a continous connection with the server, sending changes in the source files. When a refactor request is received, it performs the changes and sends the modified source files to the client.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Zoltán Kelemen
maintainer:          kelemzol@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable haskell-tools-demo
  main-is:             Main.hs
  other-modules:       Language.Haskell.Tools.ASTDebug
                     , Language.Haskell.Tools.ASTDebug.Instances
  ghc-options:         -with-rtsopts=-M1500m

  build-depends:       base >=4.8 && <5.0
                     , ghc >=7.10 && <8.1
                     , mtl >=2.2 && <2.3
                     , transformers >= 0.4
                     , references >= 0.3.1
                     , directory >= 1.2.6
                     , ghc-paths >= 0.1.0
                     , containers >= 0.5.7
                     , http-types >= 0.9.1
                     , warp >= 3.2.8
                     , wai >= 3.2.1
                     , websockets >= 0.9.6.1 && < 1.0
                     , wai-websockets >= 3.0.1
                     , aeson >= 0.10.0
                     , bytestring
                     , filepath
                     , haskell-tools-ast         >=0.2 && <0.3
                     , haskell-tools-ast-fromghc >=0.2 && <0.3
                     , haskell-tools-ast-trf     >=0.2 && <0.3
                     , haskell-tools-prettyprint >=0.2 && <0.3
                     , haskell-tools-refactor    >=0.2 && <0.3


  default-language:  Haskell2010