name:                haskell-tools-demo
version:             0.3.0.1
synopsis:            A web-based demo for Haskell-tools Refactor. 
description:         Allows websocket clients to connect and performs refactorings on demand. The clients maintain a continous connection with the server, sending changes in the source files. When a refactor request is received, it performs the changes and sends the modified source files to the client.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Zoltán Kelemen
maintainer:          kelemzol@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable haskell-tools-demo
  main-is:             Main.hs
  other-modules:       Language.Haskell.Tools.ASTDebug
                     , Language.Haskell.Tools.ASTDebug.Instances
                     , Language.Haskell.Tools.Demo
  ghc-options:         -with-rtsopts=-M1500m

  build-depends:       base                      >= 4.9  && < 4.10
                     , mtl                       >= 2.2  && < 2.3
                     , transformers              >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.3
                     , containers                >= 0.5  && < 0.6
                     , aeson                     >= 0.11 && < 0.12
                     , bytestring                >= 0.10 && < 0.11
                     , http-types                >= 0.9  && < 0.10
                     , warp                      >= 3.2  && < 3.3
                     , wai                       >= 3.2  && < 3.3
                     , websockets                >= 0.9  && < 0.10
                     , wai-websockets            >= 3.0  && < 3.1
                     , references                >= 0.3  && < 0.4
                     , ghc                       >= 8.0  && < 8.1
                     , ghc-paths                 >= 0.1  && < 0.2
                     , filepath                  >= 1.4  && < 1.5
                     , haskell-tools-ast         >= 0.3  && < 0.4
                     , haskell-tools-backend-ghc >= 0.3  && < 0.4
                     , haskell-tools-prettyprint >= 0.3  && < 0.4
                     , haskell-tools-refactor    >= 0.3  && < 0.4
  default-language:  Haskell2010