name:                haskell-tools-demo
version:             0.7.0.0
synopsis:            A web-based demo for Haskell-tools Refactor.
description:         Allows websocket clients to connect and performs refactorings on demand. The clients maintain a continous connection with the server, sending changes in the source files. When a refactor request is received, it performs the changes and sends the modified source files to the client.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Zoltán Kelemen
maintainer:          kelemzol@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Tools.Demo
  other-modules:       Language.Haskell.Tools.ASTDebug
                     , Language.Haskell.Tools.ASTDebug.Instances
  build-depends:       base                      >= 4.9  && < 4.10
                     , mtl                       >= 2.2  && < 2.3
                     , transformers              >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.4
                     , containers                >= 0.5  && < 0.6
                     , aeson                     >= 1.0 && < 1.2
                     , bytestring                >= 0.10 && < 0.11
                     , http-types                >= 0.9  && < 0.10
                     , warp                      >= 3.2  && < 3.3
                     , wai                       >= 3.2  && < 3.3
                     , websockets                >= 0.10  && < 0.11
                     , wai-websockets            >= 3.0  && < 3.1
                     , references                >= 0.3  && < 0.4
                     , ghc                       >= 8.0.2  && < 8.1
                     , ghc-paths                 >= 0.1  && < 0.2
                     , filepath                  >= 1.4  && < 1.5
                     , haskell-tools-ast         >= 0.7  && < 0.8
                     , haskell-tools-backend-ghc >= 0.7  && < 0.8
                     , haskell-tools-prettyprint >= 0.7  && < 0.8
                     , haskell-tools-refactor    >= 0.7  && < 0.8
  default-language:  Haskell2010

executable ht-demo
  main-is:             Main.hs
  hs-source-dirs:      exe
  ghc-options:         -with-rtsopts=-M1500m
  build-depends:       base                      >= 4.9  && < 4.10
                     , haskell-tools-demo        >= 0.7  && < 0.8
  default-language:  Haskell2010

test-suite haskell-tools-demo-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                      >= 4.9 && < 4.10
                     , HUnit                     >= 1.5 && < 1.7
                     , tasty                     >= 0.11 && < 0.12
                     , tasty-hunit               >= 0.9 && < 0.10
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , bytestring                >= 0.10 && < 0.11
                     , network                   >= 2.6 && < 2.7
                     , websockets                >= 0.10 && < 0.11
                     , aeson                     >= 1.0 && < 1.2
                     , haskell-tools-demo        >= 0.7 && < 0.8
  default-language:    Haskell2010
