name:                haskell-tools-test
version:             0.1.3.0
synopsis:            Tests for Haskell-Tools
description:         Tests for Haskell-Tools 
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10


test-suite haskell-tools-test
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base                      >=4.9   && <5.0
                     , HUnit                     >=1.3   && <2.0
                     , ghc                       >=8.0   && <8.1
                     , ghc-paths                 >=0.1   && <0.2
                     , transformers              >=0.5   && <0.6
                     , either                    >=4.0   && <5.0
                     , filepath                  >=1.4   && <2.0
                     , haskell-tools-ast         >=0.1.3 && <2.0
                     , haskell-tools-ast-fromghc >=0.1.3 && <2.0
                     , haskell-tools-ast-trf     >=0.1.3 && <2.0
                     , haskell-tools-prettyprint >=0.1.3 && <2.0
                     , haskell-tools-refactor    >=0.1.3 && <2.0
  default-language:    Haskell2010