name:                haskell-tools-ast-gen
version:             0.2.0.0
synopsis:            Facilities for generating new parts of the Haskell-Tools AST
description:         Contains utility functions to generate parts of the Haskell-Tools AST. Generates these elements to be compatible with the source annotations that are already present on the AST. The package is divided into modules based on which language elements can the given module generate. This packages should be used during the transformations to generate parts of the new AST.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.AST.Gen
                     , Language.Haskell.Tools.AST.Gen.Modules
                     , Language.Haskell.Tools.AST.Gen.Decls
                     , Language.Haskell.Tools.AST.Gen.Binds
                     , Language.Haskell.Tools.AST.Gen.Types
                     , Language.Haskell.Tools.AST.Gen.Kinds
                     , Language.Haskell.Tools.AST.Gen.Exprs
                     , Language.Haskell.Tools.AST.Gen.Literals
                     , Language.Haskell.Tools.AST.Gen.Stmts
                     , Language.Haskell.Tools.AST.Gen.Patterns
                     , Language.Haskell.Tools.AST.Gen.Base
                     , Language.Haskell.Tools.AST.Gen.Utils
  build-depends:       base                  >=4.9   && <5.0
                     , ghc                   >=8.0   && <8.1
                     , mtl                   >=2.2   && <2.3
                     , containers            >=0.5   && <0.6
                     , references            >=0.3.2 && <1.0
                     , haskell-tools-ast     >=0.2   && <0.3
                     , haskell-tools-ast-trf >=0.2   && <0.3
  default-language:    Haskell2010