name:                haskell-tools-prettyprint
version:             0.1.0.0
synopsis:            Pretty printing of Haskell AST
-- description:         
homepage:            https://github.com/nboldi/haskell-tools
-- license:             
-- license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.PrettyPrint
                     , Language.Haskell.Tools.PrettyPrint.RoseTree
  build-depends:       base                  >=4.8  && <4.9
                     , mtl                   >=2.2  && <2.3
                     , containers            >=0.5  && <0.6
                     , references            >=0.3  && <1.0
                     , structural-traversal  >=0.1  && <0.2
                     , haskell-tools-ast     >=0.1  && <1.0
                     , haskell-tools-ast-trf >=0.1  && <1.0
  -- hs-source-dirs:      
  default-language:    Haskell2010