name:                haskell-tools-prettyprint
version:             0.2.0.0
synopsis:            Pretty printing of Haskell-Tools AST
description:         Converts the Haskell-Tools AST to text. If the AST was created from the GHC AST this pretty printing will result in the original source code. Generated AST parts will get the default formatting. Works using the source annotations that are present in the AST. Creates a rose tree first to simplify the conversion.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.PrettyPrint
                     , Language.Haskell.Tools.PrettyPrint.RoseTree
  build-depends:       base                  >=4.9   && <5.0
                     , ghc                   >=8.0   && <8.1
                     , mtl                   >=2.2   && <2.3
                     , containers            >=0.5   && <0.6
                     , references            >=0.3.2 && <1.0
                     , haskell-tools-ast     >=0.2   && <0.3
                     , haskell-tools-ast-trf >=0.2   && <0.3
                     , split                 >=0.2   && <1.0
  default-language:    Haskell2010