name:                haskell-tools-ast-trf
version:             0.1.1.0
synopsis:            Annotation transformation on the Haskell AST
-- description:         
homepage:            https://github.com/nboldi/haskell-tools
-- license:             
-- license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.AnnTrf.RangeToRangeTemplate
                     , Language.Haskell.Tools.AnnTrf.RangeTemplateToSourceTemplate
                     , Language.Haskell.Tools.AnnTrf.RangeTemplate
                     , Language.Haskell.Tools.AnnTrf.SourceTemplate
                     , Language.Haskell.Tools.AnnTrf.SourceTemplateHelpers
                     , Language.Haskell.Tools.AnnTrf.PlaceComments  
  build-depends:       base                 >=4.9 && <5.0
                     , ghc                  >=8.0 && <8.1
                     , haskell-tools-ast    >=0.1 && <1.0
                     , uniplate             >=1.6 && <2.0
                     , references           >=0.1 && <1.0
                     , structural-traversal >=0.1 && <1.0
                     , mtl                  >=2.2 && <2.3
                     , containers           >=0.5 && <0.6
                     , MissingH             >=1.3 && <2.0
  -- hs-source-dirs:      
  default-language:    Haskell2010