name:                haskell-tools-ast
version:             0.1.0.0
synopsis:            Haskell AST for efficient tooling
-- description:         
homepage:            https://github.com/nboldi/haskell-tools
-- license:             
-- license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.AST
                     , Language.Haskell.Tools.AST.FromGHC
                     , Language.Haskell.Tools.AST.FromGHC.OrdSrcSpan
                     
  other-modules:       Language.Haskell.Tools.AST.Modules
                     , Language.Haskell.Tools.AST.TH
                     , Language.Haskell.Tools.AST.Decls
                     , Language.Haskell.Tools.AST.Binds
                     , Language.Haskell.Tools.AST.Exprs
                     , Language.Haskell.Tools.AST.Stmts
                     , Language.Haskell.Tools.AST.Patterns
                     , Language.Haskell.Tools.AST.Types
                     , Language.Haskell.Tools.AST.Kinds
                     , Language.Haskell.Tools.AST.Literals
                     , Language.Haskell.Tools.AST.Base
                     , Language.Haskell.Tools.AST.Ann
                     , Language.Haskell.Tools.AST.SourceMap
                   
                     , Language.Haskell.Tools.AST.Instances
                     , Language.Haskell.Tools.AST.Instances.Show
                     , Language.Haskell.Tools.AST.Instances.Data
                     , Language.Haskell.Tools.AST.Instances.Generic
                     , Language.Haskell.Tools.AST.Instances.StructuralTraversal
                     , Language.Haskell.Tools.AST.Lenses
                     , Language.Haskell.Tools.AST.Helpers

                     , Language.Haskell.Tools.AST.FromGHC.Modules
                     , Language.Haskell.Tools.AST.FromGHC.TH
                     , Language.Haskell.Tools.AST.FromGHC.Decls
                     , Language.Haskell.Tools.AST.FromGHC.Binds
                     , Language.Haskell.Tools.AST.FromGHC.Exprs
                     , Language.Haskell.Tools.AST.FromGHC.Stmts
                     , Language.Haskell.Tools.AST.FromGHC.Patterns
                     , Language.Haskell.Tools.AST.FromGHC.Types
                     , Language.Haskell.Tools.AST.FromGHC.Kinds
                     , Language.Haskell.Tools.AST.FromGHC.Literals
                     , Language.Haskell.Tools.AST.FromGHC.Base
                     , Language.Haskell.Tools.AST.FromGHC.Monad
                     , Language.Haskell.Tools.AST.FromGHC.Utils
                     
  other-extensions:    CPP
                     , LambdaCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , StandaloneDeriving
                     , TypeFamilies
                     , KindSignatures
                     , MultiParamTypeClasses
                     , UndecidableInstances
  build-depends:       base >=4.8 && <4.9
                     , ghc >=7.10 && <7.11
                     , bytestring >=0.10 && <1.0
                     , safe >=0.3
                     , lens >=4.0 && <5.0
                     , ghc-paths >=0.1 && <0.2
                     , containers >=0.5 && <0.6
                     , directory >=1.2 && <1.3
                     , transformers >=0.4 && <0.5
                     , mtl >=2.2 && <2.3
                     , split >=0.2 && <0.3
                     , structural-traversal >=0.1 && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010