name:                haskell-tools-ast
version:             0.1.0.0
synopsis:            Haskell AST for efficient tooling
-- description:         
homepage:            https://github.com/nboldi/haskell-tools
-- license:             
-- license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.AST    
  other-modules:       Language.Haskell.Tools.AST.Modules
                     , Language.Haskell.Tools.AST.TH
                     , Language.Haskell.Tools.AST.Decls
                     , Language.Haskell.Tools.AST.Binds
                     , Language.Haskell.Tools.AST.Exprs
                     , Language.Haskell.Tools.AST.Stmts
                     , Language.Haskell.Tools.AST.Patterns
                     , Language.Haskell.Tools.AST.Types
                     , Language.Haskell.Tools.AST.Kinds
                     , Language.Haskell.Tools.AST.Literals
                     , Language.Haskell.Tools.AST.Base
                     , Language.Haskell.Tools.AST.Ann
                   
                     , Language.Haskell.Tools.AST.Instances
                     , Language.Haskell.Tools.AST.Instances.Eq
                     , Language.Haskell.Tools.AST.Instances.Show
                     , Language.Haskell.Tools.AST.Instances.Data
                     , Language.Haskell.Tools.AST.Instances.Generic
                     , Language.Haskell.Tools.AST.Instances.StructuralTraversal
                     , Language.Haskell.Tools.AST.References
                     , Language.Haskell.Tools.AST.Helpers
                     , Language.Haskell.Tools.AST.Utils.OrdSrcSpan
                     
  build-depends:       base                 >=4.8  && <4.9
                     , ghc                  >=7.10 && <7.11
                     , references           >=0.3  && <1.0
                     , uniplate             >=1.6  && <2.0
                     , structural-traversal >=0.1  && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010